gcc/testsuite/rust/rustc/ui/parser/mismatched-braces/missing-close-brace-in-trait_dg.rs
trait T {
    fn foo(&self);

pub(crate) struct Bar<T>();

impl T for Bar<usize> {

fn foo(&self) {}
}

fn main() {} // { dg-error "" "" { target *-*-* } }

